# uvsq-calendar-sync

./: .gitignore  README.md  generate_calendars.py  main.py  pyproject.toml
.github/workflows/: update_calendar.yml
calendars/: M2_DATASCALE.ics
src/edt_uvsq/: __init__.py  ical_generator.py  scraper.py
tests/: test_ical_generator.py  test_scraper.py
