[project]
name = "uvsq-calendar-sync"
version = "1.0.0"
description = "Automatic calendar sync for UVSQ course schedules"
authors = [
    {name = "Khaled BOUABDALLAH", email = "khaled.bouabdallah@ens.uvsq.fr"}
]
readme = "README.md"

requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "icalendar>=6.3.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edt_uvsq"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/edt_uvsq --cov-report=term-missing"
pythonpath = ["src"]g

